Fix user dropdown z-index to appear above subnav
Added z-index: 9999 to .user-menu to ensure dropdown displays
on top of all other elements including the study/section subnavs.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9509,6 +9509,7 @@ body.cms-edit-mode [data-cms-editable]:hover {
 /* User Menu Dropdown */
 .user-menu {
     position: relative;
+    z-index: 9999;
 }
 
 .user-menu-trigger {
